--- a/src/index.html
+++ b/src/index.html
@@ -7,57 +7,24 @@
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
-  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css"
+        integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
 
-  <style>
-    /* Always set the map height explicitly to define the size of the div
-     * element that contains the map. */
-    #map {
-      height: 100%;
-    }
-
-    /* Optional: Makes the sample page fill the window. */
-    html, body {
-      height: 100%;
-      margin: 0;
-      padding: 0;
-    }
-  </style>
+  <script>
+    var xhrObj = new XMLHttpRequest();
+    var url = '/config/config.js?' + Date.now();
+    xhrObj.open('GET', url, false);
+    xhrObj.send('');
+    var se = document.createElement('script');
+    se.type = "text/javascript";
+    se.text = xhrObj.responseText;
+    document.getElementsByTagName('head')[0].appendChild(se);
+  </script>
 
 </head>
 <body>
+
 <app-root></app-root>
-
-<!--<div id="map"></div>-->
-<!--<script>-->
-  <!--var map;-->
-
-  <!--function initMap() {-->
-    <!--map = new google.maps.Map(document.getElementById('map'), {-->
-      <!--zoom: 2,-->
-      <!--center: new google.maps.LatLng(2.8, -187.3),-->
-      <!--mapTypeId: 'terrain'-->
-    <!--});-->
-
-    <!--var script = document.createElement('script');-->
-    <!--script.src = 'https://developers.google.com/maps/documentation/javascript/examples/json/earthquake_GeoJSONP.js';-->
-    <!--document.getElementsByTagName('head')[0].appendChild(script);-->
-  <!--}-->
-
-  <!--window.eqfeed_callback = function (results) {-->
-    <!--for (var i = 0; i < results.features.length; i++) {-->
-      <!--var coords = results.features[i].geometry.coordinates;-->
-      <!--var latLng = new google.maps.LatLng(coords[1], coords[0]);-->
-      <!--var marker = new google.maps.Marker({-->
-        <!--position: latLng,-->
-        <!--map: map-->
-      <!--});-->
-    <!--}-->
-  <!--}-->
-<!--</script>-->
-<!--<script async defer-->
-        <!--src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCplGJs4HttZiPbULm-6GcfS6HJi0m7poM&callback=initMap">-->
-<!--</script>-->
 
 </body>
 </html>
